--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
 
 	<script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js" integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9" crossorigin="anonymous"></script>
+	<script src="constants.js"></script>
 	<script src="script.js"></script>
 </body>
 </html>
