--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
 		</div>
 		<div id="container">
 			<div id="gameOverEle">
-				<span class="message">Click to Start Game</span><br>
-				<div class="btnStart">Start Game</div>
+				<span class="message"></span><br>
+				<div class="btnStart">MALWARE HUNTER</div>
 			</div>
 			<div class="base"></div>
 			<div class="box">
-				<div class="turret"></div>
+				<div class="turret">
+					<i id ="robotIcon" class="fas fa-robot fa-3x"></i>
+				</div>
 			</div>
 		</div>
 
@@ -36,6 +38,8 @@
 
 
 	<script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js" integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9" crossorigin="anonymous"></script>
+	
+
 	<script src="constants.js"></script>
 	<script src="script.js"></script>
 </body>
